<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="32dp"
        android:paddingBottom="32dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:background="@drawable/rounded_input_background"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp"
            android:padding="16dp"
            android:background="@drawable/rounded_input_background"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:layout_marginBottom="16dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
